k3s/search-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  selector:
    app: search-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
