k3s/search-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-service
spec:
  rules:
     - http:
        paths:
          - path: /api/search
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 8083
